=== 1.0.1 / 29 May 2008

* Make sure downloads open the file in binary mode to appease Windows [Jamis Buck]


=== 1.0.0 / 1 May 2008

* Pass the channel object as the first argument to the progress callback [Jamis Buck]


=== 1.0 Preview Release 1 (0.99.0) / 22 Mar 2008

* Birthday!